--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,4 @@
+@import 'colors.modules.scss';
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -5,6 +6,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.home-logo-img {
+  border-radius: 25% 2% 25% 2%;
+  box-shadow: 10px 5px 25px $bg-color-light;
 }
 
 .title a {
@@ -57,9 +62,7 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition:
-    color 0.15s ease,
-    border-color 0.15s ease;
+  transition: color 0.15s ease, border-color 0.15s ease;
 }
 
 .card:hover,
