DAJR-256, DAJR-257, DAJR-260 Added tailwind css support

--- a/styles/colors.modules.scss
+++ b/styles/colors.modules.scss
@@ -11,3 +11,4 @@ $bg-color-xxlight: #c9dff8;
 $alert: rgb(208, 0, 0);
 $info: rgb(0, 122, 0);
 $clear-text: rgb(255, 255, 255);
+$really-dark: #00011c;
