--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -1,81 +1,19 @@
 @import 'colors.modules.scss';
 
-.heading2Xl {
-  font-size: 2.5rem;
-  line-height: 1.2;
-  font-weight: 800;
-  letter-spacing: -0.05rem;
-  margin: 1rem 0;
-}
-
-.headingXl {
-  font-size: 2rem;
-  line-height: 1.3;
-  font-weight: 800;
-  letter-spacing: -0.05rem;
-  margin: 1rem 0;
-}
-
-.headingLg {
-  font-size: 1.5rem;
-  line-height: 1.4;
-  margin: 1rem 0;
-}
-
-.headingMd {
-  font-size: 1.2rem;
-  line-height: 1.5;
-}
-
-.borderCircle {
-  border-radius: 9999px;
-}
-
-.colorInherit {
-  color: inherit;
-}
-
-.padding1px {
-  padding-top: 1px;
-}
-
-.list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.listItem {
-  margin: 0 0 1.25rem;
-}
-
-.lightText {
-  color: #666;
-}
-
-.p-title-header {
-  width: 100%;
-  place-self: center;
-  color: $primary-color;
-  font-size: 2em;
-}
-
-.clear-centered-text {
-  color: $bg-color-xlight;
-  align-self: center;
-  font-size: 1em;
-  margin: 0;
-  padding: 0;
+.home-logo-img {
+  border-radius: 25% 2% 25% 2%;
+  box-shadow: 10px 5px 25px $bg-color-light;
+  margin: 0 auto 3em auto;
 }
 
 .btn,
 .btn-icon {
-  color: $primary-color;
+  color: $really-dark;
   cursor: pointer;
   font-size: 1em;
   font-weight: 400;
   line-height: 2em;
-  padding: 0 1em;
+  padding: 0.5em 1em;
   margin: 0 0.5em;
   position: relative;
   text-decoration: none;
@@ -101,11 +39,11 @@
 .button {
   // text-align: center;
   place-content: center;
-  width: auto;
+  // width: auto;
   color: #fff;
   font-size: 1rem;
   padding: 0.5em 1em;
-  margin: 1em 0 0 0;
+  margin: 0 auto;
   border-radius: 5px;
   -webkit-transition: 0.35s ease-in-out;
   -moz-transition: 0.35s ease-in-out;
