--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,12 +2,12 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import '../styles/colors.modules.scss';
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
 html {
   padding: 0;
   margin: 0;
-  font-family: 'DM Sans', sans-serif;
+  // font-family: 'DM Sans', sans-serif;
   /* font-size: 1.2vw; */
   font-size: 0.9em;
   text-align: center;
