DAJR-256, DAJR-266, DAJR-267, DAJR-268, DAJR269, Add : modal to display employee infos

--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -69,3 +69,6 @@
 .fa-small {
   font-size: 1rem;
 }
+.darkBG {
+  @apply bg-[rgba(0,0,0,0.2)] w-screen h-screen overflow-hidden z-0 absolute left-0 top-0;
+}
