--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -36,6 +36,13 @@
   border-radius: 5px;
   @apply shadow-[0_0_10px_2px] shadow-primary-color;
 }
+.cal-button {
+  @apply self-center p-1 text-xs rounded-full bg-secondary-color text-white;
+  &:hover {
+    @apply bg-white text-black shadow-btn-light-blue shadow-[0_2px_10px_5px];
+  }
+}
+
 .button {
   place-content: center;
   // color: #fff;
